# OpenGL_Modeling

./: CMakeLists.txt  Modeling.sln
Modeling/: Camera.hpp  Mesh.hpp  Model.hpp  Modeling.cpp  Modeling.vcxproj  Modeling.vcxproj.filters  Shader.hpp  glad.c  shader.fs
deffered_shading/include/: Common.hpp  Mesh.hpp  Texture.hpp
deffered_shading/shader/: deffered.frag  framebuffer.vert  light.frag
deffered_shading/src/: main.cpp
framebuffer/: CMakeLists.txt
framebuffer/include/: Light.hpp  Mesh.hpp  Model.hpp  Program.hpp  Shader.hpp  Texture.hpp
framebuffer/shader/: framebuffer.frag  grayscale.frag  inverse.frag  kernel_effect.frag  light.frag  model.frag  model.vert  specularMap.vert  texture.frag  texture.vert
framebuffer/src/: main.cpp
include/: Camera.hpp  Common.hpp  Object.hpp  Program.hpp  Texture.hpp
normalMapping/: CMakeLists.txt
normalMapping/include/: Texture.hpp
normalMapping/shader/: normalMap.frag
normalMapping/src/: main.cpp
normalMapping_framebuffer/include/: Framebuffer.hpp  MathOP.hpp  Model.hpp
normalMapping_framebuffer/shader/: normalMap.frag
normalMapping_framebuffer/src/: main.cpp
shader/: normalMap.frag  shader.frag  shader.fs  shader.vert  shader.vs
skeletal_Animation/include/: AniModel.hpp  Animation.hpp  Animator.hpp  AssimpGLMHelpers.hpp  Bone.hpp  Camera.hpp  Common.hpp  Framebuffer.hpp  Light.hpp  Mesh.hpp  Model.hpp  Object.hpp
skeletal_Animation/shader/: animation.frag  animation.vert  deffered_light.frag  light.vert  normalMap.vert  normalMap_point.frag  specularMap.frag
skeletal_Animation/src/: main.cpp
src/: main.cpp
